# minicurso-agentes-langchain-basico

./: .env-modelo  README.md  books.db  exa  pyproject.toml
minicurso_agentes_langchain_basico/: agente.py  chat.py  interpreter.py  react.py  react.sql  templates.py  testa_pacote.py  tools.py  valida_invoca.py
minicurso_agentes_langchain_basico/pacote_agentes/: __init__.py  agente.py  testando.py
minicurso_agentes_langchain_basico/pacote_webscrapping/: __init__.py  queries.sql  webscrapper.py
tests/: test_agente.py  test_chat.py  test_templates.py
